--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   share_plus: ^12.0.1
   file_picker: ^10.3.7
   path_provider: ^2.1.5
+  dynamic_color: ^1.8.1
 
 dev_dependencies:
   flutter_test:
